--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "devDependencies": {
     "browser-sync": "^2.18.2",
     "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.1.3",
+    "gulp-uglify": "^2.0.0",
     "tslint": "^4.0.2"
   }
 }
